--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px;">
   <div style="font-family: 'Trebuchet MS', Helvetica, sans-serif; font-size: 20px; line-height: 21px;">&nbsp;<img src="https://img.us22.besteml.com/en/v5/user-files?userId=6473853&resource=himg&disposition=inline&name=6gu6z9fh99fd7so1p9eb7tyh48kw7w98hnez3cn4grnh6yiif831jzhg4jyqekeru3jrhmrpn7nbk1tg9uuzwaukcdhgjipiwot5qdowuptdtnfqb6xp4ntxji66au1zzu7kay8wxtaxpcwht7nfubketcr" width="24" border="0" alt="1" style="display: inline-block; vertical-align: text-bottom; width: 100%; max-width: 24px;">&nbsp;<strong>Наличие склада готовой продукции</strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px;">
-  <div style="font-family: 'Trebuchet MS', Helvetica, sans-serif; font-size: 16px; line-height: 21px;">На&nbsp;нашем складе есть все, что нужно для быстрого сбора заказа:</div>
+  <div style="font-family: 'Trebuchet MS', Helvetica, sans-serif; font-size: 16px; line-height: 21px;">На&nbsp;нашем складе есть&nbsp; <strong>650 000 готовых изделий</strong> и все что нужно для быстрого сбора заказа:</div>
 </td></tr></table>
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px;">
   <table cellpadding="0" cellspacing="0" border="0" width="100%">
@@ -182,7 +182,9 @@
       </td>
     </tr></table>
 </td></tr></table>
-<table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td>
+<table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px;">
+  <div style="font-family: 'Trebuchet MS', Helvetica, sans-serif; font-size: 16px; line-height: 21px;">&nbsp;</div>
+</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td>
   <a href="https://mir-lent.ru/" target="_blank"><img src="https://img.us12.besteml.com/en/v5/user-files?userId=6473853&resource=himg&disposition=inline&name=6fqzdankcb66rco1p9eb7tyh48kw7w98hnez3cn4grnh6yiif831jzhg4jyqekeruqzg4k1ao31mjryg3qphdf449bmkr1cx7jp9qon3x7qswqqrija8ebcgae1tks77h6dcnppxa9bg7h9ibz8o6tu68me" width="600" border="0" alt="Оставьте заявку на НОВЫЙ заказ" style="display: block; width: 100%; max-width: 600px;"></a>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-top: 20px;">
   <a href="https://mir-lent.ru/" target="_blank"><img src="https://img.hiteml.com/en/v5/user-files?userId=6473853&resource=himg&disposition=inline&name=6byh4za6cp7hgro1p9eb7tyh48kw7w98hnez3cn4grnh6yiif831jzhg4jyqekerupko35egakhzf8hgxh166edu8jmwux948j6kaokdcndwjikfmmtsh8m8jpyf4c5sqy4abphp5yeihcgx73iqux5uter" width="600" border="0" alt="Оставьте заявку на НОВЫЙ заказ" style="display: block; width: 100%; max-width: 600px;"></a>
@@ -203,7 +205,7 @@
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px;">
   <div style="font-family: 'Trebuchet MS', Helvetica, sans-serif; font-size: 16px; line-height: 21px;">Если по&nbsp;каким то&nbsp;причинам вам не&nbsp;подойдет продукция со&nbsp;склада готовой продукции, мы&nbsp;можем оперативно запускать производство под любой тираж. Благодаря этому <strong>изготовим ваш заказ от&nbsp;1&nbsp;дня. </strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px;">
-  <div style="font-family: 'Trebuchet MS', Helvetica, sans-serif; font-size: 16px; line-height: 21px;">Свое производство позволяет снизить стоимость конечного изделия. К&nbsp;тому&nbsp;же у&nbsp;нас есть <strong>скидка 5% на&nbsp;ваш следующий заказ.</strong></div>
+  <div style="font-family: 'Trebuchet MS', Helvetica, sans-serif; font-size: 16px; line-height: 21px;">Свое производство позволяет снизить стоимость конечного изделия. К&nbsp;тому&nbsp;же у&nbsp;нас есть<strong> скидка 5% на&nbsp;ваш следующий заказ. </strong>В итоге вы получите оптимальную цену, которая вас приятно порадует.</div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td>
   <a href="https://mir-lent.ru/" target="_blank"><img src="https://img.us12.besteml.com/en/v5/user-files?userId=6356637&resource=himg&disposition=inline&name=66rxockp9ecr9rzf5ztn3zp9eag5omdrwemarjr1grnh6yiif831jzhg4jyqekeru1gabyartsfdq3fdyf7js1as5kufrh33d14du9y1r74r8jdx7ezrwmcya6m7f66a51wcqnns4y1ier1wyc4ys486xce" width="600" border="0" alt="Оставьте заявку" style="display: block; width: 100%; max-width: 600px;"></a>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 10px; padding-top: 30px;">
